syntax = "proto3";

package deliveryPointUser;

option go_package = "/;deliveryPointUser";

service DeliveryPointUserService {
  rpc AttachUserToPoint (AttachUserToPointRequest) returns (Empty);
  rpc DetachUserToPoint (DetachUserToPointRequest) returns (Empty);
  rpc GetPointId (GetPointIdRequest) returns (DeliveryPointUser);
}

// Entities:
message DeliveryPointUser {
  string delivery_point_id = 1;
  string user_id = 2;
  int64 created_at = 3;
  int64 updated_at = 4;
}

message DeliveryPointUsers {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;
  repeated DeliveryPointUser delivery_point_users = 4;
}

message AttachUserToPointRequest {
  string delivery_point_id = 1;
  string user_id = 2;
}

message DetachUserToPointRequest {
  string user_id = 1;
}

message GetPointIdRequest {
  string user_id = 1;
}


// Base
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool value = 1;
}

message PaginationRequest {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}
